[package]
name = "vrchat-box"
description = "Send stdin to VRChat as chatbox messages."
version = "1.1.0"
repository = "https://github.com/TooManyChoices/vrchatbox"
edition = "2021"
license-file = "LICENSE"

[profile.dev]
incremental = true

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "z"

[dependencies]
clap = { version = "4.5.32", features = ["derive"] }
rosc = "0.10.1"
